# learning

./: .gitignore  ReadMe.md
ContactsApp/: ContactsApp.sln  ReadMe.md
ContactsApp/ContactsApp/: AboutBox.Designer.cs  AboutBox.cs  App.xaml  App.xaml.cs  ContactsApp.csproj  GroupWindow.xaml  GroupWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ModifyGroupWindow.xaml  ModifyGroupWindow.xaml.cs  PersonWindow.xaml  PersonWindow.xaml.cs  Utilities.cs
ContactsApp/Domain/: Contacts.cs  Domain.csproj  Group.cs  Pair.cs  Person.cs
ContactsApp/Infrastructure/: BinaryDataAccess.cs  IDataAccess.cs  Infrastructure.csproj
ContactsApp/Service/: Service.csproj  Services.cs
ContactsApp/UnitTests/: UnitTestBinaryDataAccess.cs  UnitTestDomainContacts.cs  UnitTestDomainGroup.cs  UnitTestDomainPerson.cs  UnitTests.csproj
StudentsEnrollmentManagementSystem/: ReadMe.txt  Students Enrollment Management System.sln
StudentsEnrollmentManagementSystem/ClassTest/: ClassTest.vcxproj  ClassTest.vcxproj.filters  UnitTestAllStudents.cpp  UnitTestClassItem.cpp  UnitTestClasses.cpp  UnitTestClassesAssociationHolder.cpp  UnitTestSerialization.cpp  UnitTestStudent.cpp  stdafx.cpp  stdafx.h
compiler/c4me/: ReadMe.md
cpp_learning/: CMakeLists.txt
cpp_learning/LocalWordCount/LocalWordCount/: CMakeLists.txt  Conf.cc  Conf.h  LocalWordCount.vcxproj  LocalWordCount.vcxproj.filters  Util.h  WordCount.cc  WordCount.h  main.cc
cpp_learning/LocalWordCount/LocalWordCount/src/: Conf.cc  Conf.h  Util.cc  Util.h  WordCount.cc  WordCount.h  main.cc
cpp_learning/LocalWordCount/UnitTests/: CMakeLists.txt  UnitTests.vcxproj  UnitTests.vcxproj.filters  UtilTest.cc  main.cc
cpp_learning/LocalWordCount/UnitTests/gtest/lib/: gtest.lib  gtest_main.lib  gtest_maind.lib
cpp_learning/LocalWordCount/UnitTests/src/: ConfTest.cc  UtilTest.cc  main.cc
cpp_learning/accelerated_cpp/: CMakeLists.txt
cpp_learning/accelerated_cpp/src/: chpater2.cc  chpater2.h  chpater3.cc  chpater3.h  chpater4.cc  chpater4.h  main.cc  main.cpp
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter00/: hello
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter01/: greet
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter02/: frame
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter03/: avg  med
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter04/: main1  main2  main3
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter05/: fails_iters  fails_list  fails_vec1  fails_vec2  pics_main  split_main  split_main2
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter06/: ext_fails1  ext_fails2  grade_analysis  palin  split_main  urls_main
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter07/: grammar  wc  xref
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter08/: split_main
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter09/: grading_prog
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter10/: concat_files  copyfile  pointer_example  write_args
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter11/: analysis  main2  main3  urls_main
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter12/: urls_main
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter13/: main_core  main_core_ptrs  main_grad  main_orig
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter14/: std_main1  std_main2  std_main3
cpp_learning/accelerated_cpp/src/accelerated_cxx/chapter16/: histo
cpp_learning/cpp_concurrency_in_action/: CMakeLists.txt  tags
cpp_learning/cpp_concurrency_in_action/src/: chpater1.cc  chpater1.cpp  chpater1.h  chpater2.cc  chpater2.cpp  chpater2.h  chpater3.cc  chpater3.cpp  chpater3.h  chpater4.cc  chpater4.h  chpater5.cpp  chpater5.h  chpater6.cc  chpater6.h  chpater6_queue_class.h  main.cc  main.cpp  utils.h
cpp_learning/cpp_primer/: .ycm_extra_conf.py  CMakeLists.txt
cpp_learning/cpp_primer/src/: chpater2.cpp  chpater2.h  chpater3.cpp  chpater3.h  main.cpp
cpp_learning/cpp_primer/src/ch02/: CMakeLists.txt  chpater2.cpp
cpp_learning/cpp_primer/src/ch03/: CMakeLists.txt  chpater3.cpp
cpp_learning/cpp_primer/src/ch07/: CMakeLists.txt  chpater7.cc
cpp_learning/cpp_primer/src/ch08/: CMakeLists.txt  chpater8.cc
cpp_learning/cpp_primer/src/ch09/: CMakeLists.txt  chpater9.cc
cpp_learning/temp/: First.h  (+3 more)
data_strcture_and_algorithms/: CMakeLists.txt
data_strcture_and_algorithms/algorithms/greedy/: CMakeLists.txt  tags
data_strcture_and_algorithms/algorithms/greedy/src/: activity_selection.cc  activity_selection.h  coins.cc  coins.h  huffman_coding.cc  huffman_coding.h  huffman_coding1.cc  huffman_coding1.h  job_sequencing.cc  job_sequencing.h  main.cc  minimum_spanning_tree.cc  minimum_spanning_tree.h
data_strcture_and_algorithms/algorithms/sort/: CMakeLists.txt
data_strcture_and_algorithms/algorithms/sort/src/: bubble.cc  bubble.h  bucket.cc  bucket.h  counting.cc  counting.h  heap.cc  heap.cpp  heap.h  insertion.cc  insertion.h  main.cc  main.cpp  merge.cc  merge.cpp  merge.h  quick.cc  quick.h  selection.cc  selection.h  shell.cc  shell.h  utilities.cc  utilities.cpp  utilities.h
data_strcture_and_algorithms/data_strctures/: CMakeLists.txt
data_strcture_and_algorithms/data_strctures/src/: graph.cc  graph.h  heap.cc  heap.h  main.cc  utility.cc  utility.h
data_strcture_and_algorithms/dynamic_programming/: CMakeLists.txt
data_strcture_and_algorithms/dynamic_programming/src/: lcs.h  palindromic.c  palindromic.h  paths.c  robber.c  utils.h
data_strcture_and_algorithms/pattern_matching/: CMakeLists.txt
data_strcture_and_algorithms/pattern_matching/src/: main.c
introduction_to_big_data_with_apache_spark/: ReadMe.md
linux/: CMakeLists.txt
linux/rcu/: CMakeLists.txt
notes/: .me_configs.data
rap/: Bad Meets Evil feat. Bruno Mars - Lighters (Verseatile Cover Remix & Jason Chen).md
temp/: a.cc  atomic_bool.cpp  memory_ord.cpp  test.sh
the_art_of_mp_p/: CMakeLists.txt  tags
the_art_of_mp_p/src/: CMakeLists.txt  main.cc
the_art_of_mp_p/src/ch1/: ch1.cc  ch1.h  philosopher1.cc  philosopher1.h
web/: emmet.html
(+301 files in other folders)
