cmake_minimum_required(VERSION 3.2)
project(cpp_concurrency_in_action)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}/src" CPP_CONCURRENCY_IN_ACTION_SOURCE_FILES)

add_executable(cpp_concurrency_in_action ${CPP_CONCURRENCY_IN_ACTION_SOURCE_FILES})
